Make action bar look a bit better when overlapping content in collapsed markup view. Also fix distracting action button outlines.

--- a/src/vs/workbench/contrib/positronNotebook/browser/notebookCells/NotebookMarkupCell.css
+++ b/src/vs/workbench/contrib/positronNotebook/browser/notebookCells/NotebookMarkupCell.css
@@ -18,11 +18,13 @@
 	--positron-notebooks-border-color: transparent;
 }
 
-.positron-notebook-cell.editor-hidden:not(:hover) .action-bar {
+.positron-notebook-cell.editor-hidden:not(:hover)
+	.positron-notebooks-cell-action-bar {
 	display: none;
 }
 /* Put the actions bar halfway down the cell so it's more clearly associated with the content that
    doesn't have borders to deliniate where it sits */
-.positron-notebook-cell.editor-hidden .action-bar {
+.positron-notebook-cell.editor-hidden .positron-notebooks-cell-action-bar {
 	top: calc(50% - (var(--bar-h) / 2));
+	border-radius: 0.25rem;
 }
